[FIX] hr_referral: Fix layout issue on user icon

--- a/hr_referral/static/src/scss/hr_referral.scss
+++ b/hr_referral/static/src/scss/hr_referral.scss
@@ -229,7 +229,6 @@ $font-family-sans-serif;
         justify-content: center;
         align-items: center;
         >img {
-            position: absolute;
             z-index: 1;
         }
     }
